<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:background="@color/dark_blue"
    tools:context="com.example.feature_main_screen.presentation.fragment.MainScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDiscover"
            style="@style/Header1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/discover"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
            app:layout_constraintStart_toStartOf="@+id/verticalGuidelinelEft"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_searchview"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
            app:layout_constraintStart_toStartOf="@+id/verticalGuidelinelEft"
            app:layout_constraintTop_toBottomOf="@+id/tvDiscover" />

        <TextView
            android:id="@+id/tvTrending"
            style="@style/Header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/trending"
            app:layout_constraintStart_toStartOf="@+id/verticalGuidelinelEft"
            app:layout_constraintTop_toBottomOf="@+id/vpComingSoon" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpComingSoon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvComingSoon" />

        <TextView
            android:id="@+id/tvCategories"
            style="@style/Header1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/categories"
            app:layout_constraintStart_toStartOf="@+id/verticalGuidelinelEft"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <Button
            android:id="@+id/btnSeeAllCategories"
            style="@style/MainScreenViewAllTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/button_see_all"
            app:layout_constraintBottom_toBottomOf="@+id/tvTrending"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
            app:layout_constraintTop_toTopOf="@+id/tvTrending" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutCategories"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            android:background="@color/dark_blue"
            android:clipToPadding="false"
            android:paddingStart="12dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategories"
            app:tabIndicatorHeight="0dp"
            app:tabMode="scrollable"
            app:tabRippleColor="@null" />

        <TextView
            android:id="@+id/tvComingSoon"
            style="@style/Header1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:text="@string/coming_soon"
            app:layout_constraintStart_toStartOf="@+id/verticalGuidelinelEft"
            app:layout_constraintTop_toBottomOf="@+id/tabLayoutCategories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="8dp"
            android:paddingBottom="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTrending"
            tools:listitem="@layout/adapter_movie_item">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btnSeeAllNewMovies"
            style="@style/MainScreenViewAllTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/button_see_all"
            app:layout_constraintBottom_toBottomOf="@+id/tvComingSoon"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
            app:layout_constraintTop_toTopOf="@+id/tvComingSoon" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuidelinelEft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <TextView
            android:id="@+id/tvSearchHint"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Search"
            app:layout_constraintBottom_toBottomOf="@+id/ivSearch"
            app:layout_constraintStart_toEndOf="@+id/ivSearch"
            app:layout_constraintTop_toTopOf="@+id/ivSearch"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="@+id/searchView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

